--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,5 @@
 
 // Bootstrap
 @import '~admin-lte/build/scss/adminlte';
+@import '~bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css';
+@import '~select2/dist/css/select2.min.css';
