--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,3 @@
-@import "admin-lte";
-@import "font-awesome";
+/*@import "admin-lte";*/
+/*@import "font-awesome";*/
 @import "@ttskch/select2-bootstrap4-theme/dist/select2-bootstrap4.min.css";
