--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,3 @@
-@import "font-awesome";
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -27,8 +25,9 @@
 }
 
 .nav-item {
-    @apply p-2 whitespace-nowrap
+    @apply p-2 whitespace-nowrap;
 }
 
 .nav-link {
+    @apply text-white;
 }
