--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('http://fonts.cdnfonts.com/css/poppins');
+@layer base {
+    html {
+        font-family: Poppins, system-ui, sans-serif;
+    }
+}
 .service {
     @apply rounded-full bg-macaw-100 w-20 h-20 mx-auto
 }
